Refactor and enhance authentication, customer creation, and environment handling:
- Replaced `clearSessionAuthentication` with `authDefaultValues` for better readability and reuse.
- Added `patchAuthState` method in `AuthStore` for partial authentication state updates.
- Refactored `CreateCustomerComponent` to log customer ID in authentication state and cleaned form structure.
- Updated development base URL in `Api.ts` to dynamically switch based on mode.
- Enhanced `.gitignore` to include `Practice.tsx`.
- Added new dependencies (`vite-node`, `jsdom`) in `package.json` to support testing and development.
- Ensured correct handling of Photo paths in `PhotosFactory` for more robust directory detection.